--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "sass": "^1.71.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
